[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-agent-keyring"
version = "0.1.0"
description = "A Python keyring backend unlocked by ssh-agent signatures"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=41.0.0",
  "keyring>=25.0.0",
]

[tool.setuptools]
packages = ["ssh_agent_keyring"]
